tests/testdata/run/error_015_dynamic_import_permissions.out
error: Uncaught (in promise) TypeError: Requires import access to "example.com:80", run again with the --allow-import flag
  await import("" + "http://example.com/subdir/mod4.js");
  ^
    at async file://[WILDCARD]/error_015_dynamic_import_permissions.js:2:3
