tests/testdata/run/error_015_dynamic_import_permissions.js
(async () => {
  await import("" + "http://example.com/subdir/mod4.js");
})();
